syntax = "proto3";

package main;

message TaskAssigned {
  string taskId = 1;
  string profileId = 2;
}

