syntax = "proto3";

package main;

message TaskCompleted {
  string taskId = 1;
}

